# font-charset-stats

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  README_zh-CN.md  build_exe.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
font_charset_stats/: __init__.py  analyzer.py  cli.py  font_reader.py  reporter.py  run.py
font_charset_stats/charsets/: __init__.py  _utils.py  base.py  big5.py  cjk.py  cns.py  gb.py  gb12345.py  japanese.py  jis.py  korean.py  latin.py
font_charset_stats/charsets/data/: big5.json  big5hkscs.json  cns11643.json  gb12345.json  gb18030_level1.json  gb18030_level2.json  gb18030_level3.json  gb2312.json  gbk.json  jis0208_level1.json  jis0208_level2.json  jis0213.json  ksx1001_hanja.json
font_charset_stats/gui/: __init__.py  __main__.py  app.py  batch_dialog.py  charset_panel.py  export_dialog.py  font_list.py  i18n.py  models.py  results_view.py  system_fonts_dialog.py  theme.py  worker.py
font_charset_stats/gui/i18n/: font_charset_stats_zh_CN.qm  font_charset_stats_zh_CN.ts  zh_CN.json
tests/: conftest.py  test_analyzer.py  test_charsets.py  test_font_reader.py  test_reporter.py
