[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "font-charset-stats"
version = "0.1.0"
description = "Analyze font character set coverage against Chinese/Japanese/Korean encoding standards"
requires-python = ">=3.9"
dependencies = [
    "fonttools>=4.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pyright",
]
gui = [
    "PySide6>=6.5",
    "matplotlib>=3.7",
]

[project.scripts]
font-charset-stats = "font_charset_stats.cli:main"
font-charset-stats-gui = "font_charset_stats.gui.app:main"

[tool.setuptools.packages.find]
include = ["font_charset_stats*"]

[tool.setuptools.package-data]
"font_charset_stats" = ["charsets/data/*.json", "gui/fonts/*"]

[tool.pyright]
typeCheckingMode = "standard"
reportAttributeAccessIssue = false
reportIncompatibleMethodOverride = false
