[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "font-charset-stats"
version = "0.1.0"
description = "Analyze font character set coverage against Chinese/Japanese/Korean encoding standards"
requires-python = ">=3.12"
dependencies = [
    "fonttools>=4.0",
]

[project.optional-dependencies]
gui = [
    "PySide6>=6.5",
    "matplotlib>=3.7",
]

[dependency-groups]
dev = [
    "ruff",
    "pyright",
    "pre-commit",
    "pytest",
]

[project.scripts]
font-charset-stats = "font_charset_stats.cli:main"
font-charset-stats-gui = "font_charset_stats.gui.app:main"

[tool.setuptools.packages.find]
include = ["font_charset_stats*"]

[tool.setuptools.package-data]
"font_charset_stats" = ["charsets/data/*.json", "gui/fonts/*", "gui/i18n/*.json"]

[tool.pyright]
typeCheckingMode = "standard"
reportAttributeAccessIssue = false
reportIncompatibleMethodOverride = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["N802"]

[tool.ruff.lint.per-file-ignores]
"font_charset_stats/charsets/*.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"
